--- a/estilos/index02.css
+++ b/estilos/index02.css
@@ -6,9 +6,33 @@
 }
 
 body{
-    background-color: black;
+    background-image: url('../imagens/fundo\(computador\).png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+a#voltar{
+    text-decoration: none;
+    color: red;
+    width: 80px;
+}
+
+a#voltar p{
+    text-align: center;background-color: white;
+    text-decoration: none;
+    padding: 15px;
+    font-weight: bold;
+    width: 80px;
+    border-radius: 10px;
+}
+
+a#voltar p:hover{
+    transition-duration: 0.5s;
+    background-color: red;
+    color: white;
 }
 
 div.box{
@@ -17,6 +41,10 @@ div.box{
     background-color: white;
     border-radius: 10px;
     color: black;
+}
+
+div.feed a{
+    text-decoration: none;
 }
 
 div.text{
@@ -32,10 +60,32 @@ p#dedicatoria{
 div.video{
     height: 400px;
     width: 200px;
-    background-color: gray;
+    background-image: linear-gradient(to top, blue, white);
     margin-left: 10px;
     display: inline-block;
     border-radius: 0px 10px;
+    margin-bottom: 15px;
+}
+
+div#primeiro{
+    background-image: linear-gradient(to bottom, #BB73E0 20%, #FF8DDB);
+}
+
+div#segundo{
+    background-image: linear-gradient(to bottom, #A3C9E2 20%, #9618F7);
+}
+
+div#terceiro{
+    background-image: linear-gradient(to bottom, #B60F46 20%, #D592FF);
+}
+
+div#quarto{
+    background-image: linear-gradient(to bottom, #849B5C 20%, #BFFFC7);
+}
+
+div.video:hover{
+    transition-duration: 0.4s;
+    background-image: linear-gradient(to bottom, blue, white);
 }
 
 div.feed{
@@ -49,8 +99,25 @@ div.fotos{
     margin-left: 10px;
     display: inline-block;
     border-radius: 0px 10px;
+    margin-bottom: 40px;
+}
+
+div#um{
+    background-image: linear-gradient(to right, #0CCDA3 20%, #C1FCD3);
+}
+
+div#dois{
+    background-image: linear-gradient(to right, #F6EFA7 20%, #FF0078);
+}
+
+div#tres{
+    background-image: linear-gradient(to right, #E65758 20%, #771D32);
 }
 
 div.fy{
     margin: auto;
+}
+
+div.fy a{
+    text-decoration: none;
 }
