--- a/estilos/index.css
+++ b/estilos/index.css
@@ -15,16 +15,16 @@ body{
 }
 
 div.box{
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 25%);
+    transform: translate(-50%, -50%);
 }
 
 img:hover{
     transition-duration: 0.3s;
     padding-bottom: 15px;
-    padding-top: 10px;
+    padding-top: 15px;
 }
 
 div.box h1{
